@@ -27,8 +27,9 @@ com.openexchange.hazelcast.enabled=true
 # "com.openexchange.hazelcast.network.join" is not "empty" (see below).
 com.openexchange.hazelcast.group.name=
 
-# The password used when joining the cluster. By default, no password is used.
-com.openexchange.hazelcast.group.password=
+# The password used when joining the cluster. Defaults to "wtV6$VQk8#+3ds!a". 
+# Please change this value, and ensure it's equal on all nodes in the cluster.
+com.openexchange.hazelcast.group.password=wtV6$VQk8#+3ds!a
 
 
 # == Network Join ============================================================
@@ -124,3 +125,11 @@ com.openexchange.hazelcast.jmx=true
 # information about entries in distributed data structures. Only taken into 
 # account if "com.openexchange.hazelcast.jmx" is "true". Defaults to "false".
 com.openexchange.hazelcast.jmxDetailed=false
+
+# Enables or disables Hazelcast's internal Memcache client request listener 
+# service. Defaults to "false", as it's not needed by the backend.
+com.openexchange.hazelcast.memcache.enabled=false
+
+# Enables or disables Hazelcast's internal REST client request listener 
+# service. Defaults to "false", as it's not needed by the backend.
+com.openexchange.hazelcast.rest.enabled=false
